Adding Bits for Responsive

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 				<div class="brick"></div>
 				<div class="brick"></div>
 				<div class="brick"></div>
-				<div class="brick"></div>
-				<div class="brick"></div>
-				<div class="brick"></div>
+				<div class="brick brick-remove-for-phone"></div>
+				<div class="brick brick-remove-for-phone"></div>
+				<div class="brick brick-remove-for-phone"></div>
 			</div>
 			<div class="brick-row">
 				<div class="brick"></div>
@@ -32,9 +32,9 @@
 				<div class="brick"></div>
 				<div class="brick"></div>
 				<div class="brick"></div>
-				<div class="brick"></div>
-				<div class="brick"></div>
-				<div class="brick"></div>
+				<div class="brick brick-remove-for-phone"></div>
+				<div class="brick brick-remove-for-phone"></div>
+				<div class="brick brick-remove-for-phone"></div>
 			</div>
 			<div class="brick-row">
 				<div class="brick"></div>
@@ -43,9 +43,9 @@
 				<div class="brick"></div>
 				<div class="brick"></div>
 				<div class="brick"></div>
-				<div class="brick"></div>
-				<div class="brick"></div>
-				<div class="brick"></div>
+				<div class="brick brick-remove-for-phone"></div>
+				<div class="brick brick-remove-for-phone"></div>
+				<div class="brick brick-remove-for-phone"></div>
 			</div>
 			<div class="brick-row">
 				<div class="brick"></div>
@@ -54,9 +54,9 @@
 				<div class="brick"></div>
 				<div class="brick"></div>
 				<div class="brick"></div>
-				<div class="brick"></div>
-				<div class="brick"></div>
-				<div class="brick"></div>
+				<div class="brick brick-remove-for-phone"></div>
+				<div class="brick brick-remove-for-phone"></div>
+				<div class="brick brick-remove-for-phone"></div>
 			</div>
 			<div class="brick-row">
 				<div class="brick"></div>
@@ -65,9 +65,9 @@
 				<div class="brick"></div>
 				<div class="brick"></div>
 				<div class="brick"></div>
-				<div class="brick"></div>
-				<div class="brick"></div>
-				<div class="brick"></div>
+				<div class="brick brick-remove-for-phone"></div>
+				<div class="brick brick-remove-for-phone"></div>
+				<div class="brick brick-remove-for-phone"></div>
 			</div>
 		</div>
 		<script src="app.js"></script>
